fixed flex and grid in project container, need to account for text overflow

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -33,14 +33,13 @@
   background-color: var(--backgroundcolor);
   display: flex;
   margin: 2rem 2rem 0 2rem;
-  justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
 }
 
 .pr-banner-title {
   height: 300px;
-  width: 720px;
+  width: 1150px;
   background-color: var(--backgroundcolor);
   padding-right: 1rem;
 
@@ -89,7 +88,7 @@
 .theme-container{
   height:100px;
   width: 300px;
-  align-self: end;
+  align-self: flex-end;
 }
 
 #theme-option-wrapper{
@@ -143,8 +142,6 @@
 }
 
 
-
-
 #sortlist{
   list-style: none;
   margin: 0;
@@ -159,14 +156,6 @@
   border: 1px dashed coral
 }
 
-#sortlist li.hint{
-  background-color: yellow;
-
-}
-#sortlist li.active{
-  background-color: red;
-
-}
 
 /* below is the arrow navigation */
 
@@ -215,6 +204,8 @@
   height: 150px;
   font-family: 'Open Sans', sans-serif;
   padding: 1rem;
+  display: flex;
+  justify-content: space-between;
   background-color: var(--backgroundcolor);
   border-radius: 8px 8px 50px 8px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
@@ -222,10 +213,6 @@
   /*box-shadow: rgba(66, 77, 88, 0.4) -5px 5px, rgba(66, 77, 88, 0.3) -10px 10px, rgba(66, 77, 88, 0.2) -15px 15px, rgba(66, 77, 88, 0.1) -20px 20px, rgba(66, 77, 88, 0.05) -25px 25px;*/
 }
 
-.pr-skills-card h5 {
-  font-size: 24px;
-  font-weight: bold;
-}
 
 /* below is the projects section */
 
@@ -255,7 +242,24 @@
   padding:  1rem;
   height: 100%;
   width: 60%;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 2fr);
+  grid-template-rows: repeat(1, 2em);
+  grid-gap: 10px;
+
+}
+
+h2.project-left {
+
+}
+
+span.project-right {
+
+}
+
+p.pr-card-descrition{
+  grid-column: 1 / 3;
+  grid-row: 2;
 }
 
 .pr-project-card-img {
@@ -265,10 +269,7 @@
   border-top-right-radius: 8px;
 }
 
-.pr-card-descrition{
-  position:relative;
-  top: 100px;
-}
+
 /* below is the experience section */
 
 .pr-exp-container {
@@ -301,7 +302,7 @@
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
   height: 300px;
   width: 400px;
-  display: inline-table;
+
   overflow-x: auto;
  }
 
